# mim_estimation

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  package.xml  readme.md
.github/workflows/: ci.yml  deploy_doc.yml
config/: rai_session_estimator.json  rai_session_estimator_tuning.json
config/demos_and_tests/: test_vicon_base_state_estimator.yaml
config/rai_sessions/: rai_session_estimator.json
config/sl_stuffs/testSensorConfigFiles/: TestSensorConfigFile.cf
demos/: demo.py  demo_base_ekf_with_imu_kin.py  demo_ekf_squatting_motion_cpp.py  demo_ekf_squatting_motion_python.py  demo_ekf_trotting_motion_cpp.py  demo_ekf_vicon_imu.cpp  demo_end_effector_force_estimator.py  demo_robot_state_estimator_fake_stepping_cpp.py  demo_robot_state_estimator_squatting_motion_cpp.py  demo_solo12_squatting.py  demo_squatting_cpp.py  demos_ekf_python.py  ekf_test.py  jacobian_test.py  solo12_simulations.py  test.py
deprecated/: ekf.hpp  ekf.hxx  ekf_vicon_imu_simple.hpp  robot_state_estimation.cpp  robot_state_estimation.hpp  simple_1d_ekf.hpp  test_ekf_vicon_imu.cpp  test_extended_kalman_filter.cpp  ukf.hpp  ukf.hxx
include/mim_estimation/: base_ekf_with_imu_kin.hpp  ekf_kin_imu.hpp  ekf_vicon_imu.hpp  end_effector_force_estimator.hpp  robot_state_estimator.hpp
include/mim_estimation/demos_and_tests/: ekf_vicon_imu_simple.hpp
include/mim_estimation/filtering_tools/: ekf.hpp  ukf.hpp
include/mim_estimation/io_tools/: data_collector.hpp  data_reader.hpp  non_rt_data_collector.hpp
include/mim_estimation/standard_filters/: butterworth_filter.hpp  butterworth_filter.hxx  ekf.hpp  ekf.hxx  ukf.hpp  ukf.hxx
include/robot_estimation/: ekf_vicon_imu.hpp  end_effector_force_estimator.hpp
include/robot_estimation/demos_and_tests/: ekf_vicon_imu_simple.hpp
include/robot_estimation/filtering_tools/: butterworth_filter.hpp  butterworth_filter.hxx  ekf.hpp  ekf.hxx  ukf.hpp  ukf.hxx
include/robot_estimation/io_tools/: data_collector.hpp  data_reader.hpp  non_rt_data_collector.hpp
python/mim_estimation/: centroidal_ekf.py  conf.py  ekf.py  test_jacobians.py
src/: base_ekf_kin_imu.cpp  base_ekf_vicon_imu.cpp  base_ekf_with_imu_kin.cpp  ekf_kin_imu.cpp  ekf_vicon_imu.cpp  ekf_vicon_imu_base.cpp  end_effector_force_estimator.cpp  robot_state_estimator.cpp
src/io_tools/: data_collector.cpp  data_reader.cpp  non_rt_data_collector.cpp
src/python/: EKF.py  conf.py
srcdg/: dg_python_module.cpp  robot_state_estimator.cpp  robot_state_estimator.hpp  signal_utils.cpp  signal_utils.hpp
srcpy/: base_ekf_with_imu_kin.cpp  boost_python_compatibility.hpp  end_effector_force_estimator.cpp  mim_estimation.cpp  robot_state_estimator.cpp
tests/: ekf_imu_vicon_estimator_ut.cpp  main.cpp  simple_1d_ekf.hpp  test_butterworth_filter.cpp  test_ekf_vicon_imu.cpp  test_end_effector_force_estimator.cpp  test_extended_kalman_filter.cpp
